tests/main_tests/ui/wrap_ref_macro_lt_err.stderr
error: lifetime may not live long enough
 --> tests/main_tests/ui/wrap_ref_macro_lt_err.rs:5:5
  |
4 | const fn foo<'a>(reff: &'a u8) -> &'static Wrapping<u8> {
  |              -- lifetime `'a` defined here
5 |     wrap_ref!(reff)
  |     ^^^^^^^^^^^^^^^ returning this value requires that `'a` must outlive `'static`
  |
  = note: this error originates in the macro `$crate::wrapper_inner` which comes from the expansion of the macro `wrap_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error: lifetime may not live long enough
 --> tests/main_tests/ui/wrap_ref_macro_lt_err.rs:9:5
  |
8 | const fn bar<'a>(reff: &'a &'a u8) -> &'a Wrapping<&'static u8> {
  |              -- lifetime `'a` defined here
9 |     wrap_ref!(reff)
  |     ^^^^^^^^^^^^^^^ returning this value requires that `'a` must outlive `'static`
  |
  = note: this error originates in the macro `$crate::wrapper_inner` which comes from the expansion of the macro `wrap_ref` (in Nightly builds, run with -Z macro-backtrace for more info)
